--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/ActivitateStructuriDate_Butean_Bogdan_2025.vcxproj
+/ActivitateStructuriDate_Butean_Bogdan_2025.vcxproj.filters
